fix: adjust form spacing

--- a/src/components/Banner/style.css
+++ b/src/components/Banner/style.css
@@ -5,3 +5,9 @@
   background-color: #F7FAFC;
   flex: 1;
 }
+
+@media only screen and (max-width: 960px) {
+  .banner {
+    display: none;
+  }
+}
