--- a/src/components/FormContainer/style.css
+++ b/src/components/FormContainer/style.css
@@ -3,6 +3,12 @@
   align-items: center;
   justify-content: center;
   background-color: #FFFFFF;
-  padding: 71px 33px 50px;
+  padding: 50px 33px;
   flex: 1;
+}
+
+@media only screen and (min-width: 960px) {
+  .form-container {
+    padding: 0;
+  }
 }
