--- a/src/components/FormWrapper/style.css
+++ b/src/components/FormWrapper/style.css
@@ -29,7 +29,7 @@
   font-weight: 400;
   font-size: 0.875rem;
   align-self: center;
-  /* margin-top: 25px; */
+  margin-top: 3rem;
 }
 
 .form-wrapper span a {
